[project]
name = "DOPCService"
version = "0.1.0"
description = "Delivery Order Price Calculator Service is for calculating the price and the breakdown of a delivery order"
authors = [
    { name = "Song Meo", email = "songmeo@pm.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dopservice"]
