[project]
name = "DOPCService"
version = "0.1.0"
description = "Delivery Order Price Calculator Service is for calculating the price and the breakdown of a delivery order"
authors = [
    { name = "Song Meo", email = "songmeo@pm.me" }
]
dependencies = [
    "fastapi>=0.115.6",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dopservice"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '''
(src/dopcservice/.*\.pyi?$)
'''
