[project]
name = "DOPCService"
version = "0.1.0"
description = "Delivery Order Price Calculator Service is for calculating the price and the breakdown of a delivery order"
authors = [
    { name = "Huong Pham", email = "songhuong.phamthi@gmail.com" }
]
dependencies = [
    "fastapi[standard]~=0.115.7",
    "requests~=2.32",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dopservice"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '''
(src/dopcservice/.*\.pyi?$)
|
(noxfile.py$)
'''
# --------------------------------------------------  PYTEST  --------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/"]
python_files = "*.py"
python_functions = "_test_*"
log_level = "DEBUG"
log_cli_level = "WARNING"
log_cli = true
log_file = "pytest.log"
addopts = "--doctest-modules -v"
asyncio_mode = "auto"

# -------------------------------------------------- COVERAGE --------------------------------------------------
[tool.coverage.run]
data_file = ".coverage"
branch    = true
parallel  = true

# --------------------------------------------------  MYPY  --------------------------------------------------
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_context = true
mypy_path = []

ignore_missing_imports = true
